<resources>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="total_ratings">Total Ratings</string>
    <string name="total_edits">Total Edits</string>
    <string name="theme">Theme</string>

    <string name="theme_preference">Dark Mode Preference</string>
    <string name="theme_config_system_default">System default</string>
    <string name="theme_config_light">Light</string>
    <string name="theme_config_dark">Dark</string>

    <string name="dynamic_color_preference">Use Dynamic Color</string>
    <string name="dynamic_color_yes">Yes</string>
    <string name="dynamic_color_no">No</string>
    <string name="dismiss_dialog_button_text">OK</string>
    <string name="choose_from_light_or_dark_theme">Choose from Light or Dark Theme</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="change_theme">Change theme</string>
</resources>