...
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = PlayGround.spacing.two),
    ) {
        OneVerticalSpacer()
        SettingsDialogSectionTitle(text = "Stats")
        Divider(color = PlayGround.color.onPrimary.copy(alpha = 0.2F))
        TwoVerticalSpacer()
        Row(modifier = Modifier.fillMaxWidth()) {
            Column(
                modifier = Modifier.weight(1F),
                horizontalAlignment = Alignment.Start,
...
            }
        }
        OneVerticalSpacer()
        Text(
            modifier = Modifier
                .fillMaxWidth(),
            text = "Hakeem",
            style = PlayGround.typography.displaySmall,
            color = contentColorFor(backgroundColor = PlayGround.color.inverseOnSurface),
            minLines = 1,
            maxLines = 1,
            textAlign = TextAlign.Center,
        )
        Text(
            modifier = Modifier
                .fillMaxWidth(),
            text = "Member since November 2016",
            style = PlayGround.typography.labelSmall,
            color = contentColorFor(backgroundColor = PlayGround.color.inverseOnSurface),
            minLines = 1,
            maxLines = 1,
            textAlign = TextAlign.Center,
        )
        TwoVerticalSpacer()
        Text(
            modifier = Modifier
                .fillMaxWidth(),
            text = "A software engineer! Member since November 2016",
            style = PlayGround.typography.bodyMedium,
            color = contentColorFor(backgroundColor = PlayGround.color.inverseOnSurface),
            minLines = 1,
            maxLines = 1,
            textAlign = TextAlign.Start,
        )
...
